k8s/primerjalnik-cen-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: primerjalnik-cen-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: primerjalnik-cen
  template:
    metadata:
      labels:
        app: primerjalnik-cen
    spec:
      containers:
        - image: maticsuc/primerjalnik_cen:2022-12-04-20-39-02
          name: primerjalnik-cen
          ports:
            - containerPort: 80
              name: server
              protocol: TCP

---

apiVersion: v1
kind: Service
metadata:
  name: primerjalnik-cen-loadbalancer
spec:
  type: LoadBalancer
  ports:
    - port: 80
      protocol: TCP
      targetPort: server
  selector:
    app: primerjalnik-cen
